fix youtube embed width on smaller screens

--- a/src/documents/styles/styles.css.less
+++ b/src/documents/styles/styles.css.less
@@ -295,6 +295,7 @@ main li { margin-top: 1em; }
     li i { padding-right: 1ex; }
 }
 
+.youtube, .youtube iframe { max-width: 100%; }
 
 .portfolio {
     img.thumb, a.thumb img {
